Guard the two employee fields that anchor calculation
Both look like ordinary fields but everything after them is calculated
against them, so each gets the rule the owner stated:

- EMPLOYMENT START may move until any WORK log exists. Before the employee
  has started there are none, and after they start it stays open for as
  long as nothing has been worked; from the first WORK log on, the date is
  what the shifts and norms behind it were calculated against.
- PROBATION LENGTH may change only while probation is still running, and
  may never be shortened into the past: days already served on probation
  stay probation, and un-probationing them would re-price settled months
  backwards. The refusal names the shortest value still possible.

Both guards skip an UNCHANGED value. The employee screen sends the whole
form on every save, so validating a resent-but-identical field would have
refused a phone-number correction for anyone who has ever worked.

The detail DTO now reports employmentStartEditable, probationEditable and
minNormGraceDays so the screen can state the reason in place instead of
offering an edit the server will refuse. The server stays the authority.

NOTE ON SCOPE: this commit also carries the backend work that was already
sitting uncommitted in the working tree (compensation schemes, employment
periods, work-category periods, i18n, transport rules and their
migrations). It could not be separated: EmploymentPeriodService, the class
these guards live in, was itself untracked, so there was no prior version
to diff a smaller commit against. Nothing was discarded.